--- a/index.qmd
+++ b/index.qmd
@@ -23,13 +23,13 @@ The specification of **Data Validation Error Format** has two goals:
 
 Last but not least the format should help to better separate validation and presentation of validation results, so both can be solved by different applications.
 
-:::{.callout-warning}
+:::{.callout-caution}
 The format is strictly limited to errors and error positions. Neither does it include other kinds of analysis results such as statistics and summaries of documents, nor does in include details about validation such as test cases, schema rules, and individual constraints. Errors can be linked to additional information with error types but the semantics of these types is out of the scope of this specification.
 :::
 
 ## Overview
 
-@fig-validation illustrates the validation process with core concepts used in this specification: a **validator** checks whether a **document** conforms to some requirements and returns a list of **errors** in return. Each error can refer to its locations in the document via **positions**.
+@fig-validation illustrates the validation process with core concepts used in this specification: a **validator** checks whether a **document** conforms to some requirements and returns a list of **errors** in return. Each error can refer to its location in the document via a **position**.
 
 ::: {#fig-validation}
 
@@ -42,13 +42,15 @@ graph LR
 Validation process
 :::
 
-Every document conforms to a **document model**. For instance JSON documents conforms to the JSON model, and character strings conforms to the model "sequence of characters from a known character set". Document models come with **encodings** how to express documents in form of documents on a lower level in form. For instance JSON documents can be encoded with JSON syntax as Unicode strings and Unicode strings can be encoded with UTF-8 as sequences of bytes (solid arrows in @fig-encodings-and-locators).
+Every document conforms to a **document model**. For instance JSON documents conforms to the JSON model, and character strings conforms to the model "sequence of characters from a known character set". Document models come with **encodings** how to express documents in form of documents on a lower level. For instance JSON documents can be encoded with JSON syntax as Unicode strings and Unicode strings can be encoded with UTF-8 as sequences of bytes (solid arrows in @fig-encodings-and-locators).
 
 :::{.callout-note}
 Eventually all documents are given as digital objects, encoded as sequence of bytes. Encodings using a sequence of characters are also called textual data formats, in contrast to binary data formats.
 :::
 
-Error positions are given in form of **locators**, each expressed in a **locator format**. Locator formats refer to sets of document models: for instance [JSON Pointer] refers to JSON, character and line numbers refer to character strings with defined line breaks, and offsets refer to sequences of elements (@fig-encodings-and-locators).<!-- ^[Unicode strings are sequences as well but its not obvious whether the elements are code points, code units or characters. Line numbers in Unicode are not trivial neither because multiple definitions of line breaks exist.]-->
+An error position is given in form of one or more **locators**, each having a **dimension** and an **address**. Each dimension refers to a **locator format** for a set of document models. For instance [JSON Pointer] refers to JSON, character and line numbers refer to character strings with defined line breaks, and offsets refer to sequences of elements (@fig-encodings-and-locators). Other examples of locator formats include [XPath] for XML, and row/column for tabular data.
+
+Locators can also contain **nested errors** to address a more specific position within another position and to support error positions in nested documents such as archive files.
 
 ::: {#fig-encodings-and-locators}
 
@@ -76,25 +78,42 @@ graph LR
 Example of encodings and locator formats
 :::
 
-[JSON Pointer]: https://datatracker.ietf.org/doc/html/rfc6901
+## Examples
 
-## Example
-
-Documents can be invalid compared to document models on many levels. For example the string `{"åå":5}` is valid JSON but it might be invalid if element `åå` is expected to hold a string instead of a number (@lst-1). The error can be located with JSON Pointer in the JSON document and with line and character number of its encoding as Unicode string:
+Documents can be invalid on many levels. For example the string `{"åå":5}` is valid JSON but it might be invalid if element `åå` is expected to hold a string instead of a number (@lst-1). The error can be located with JSON Pointer in the JSON document and with character and line number:
 
 ```{#lst-1 .json lst-cap="Error in a JSON document"}
 {
   "message": "Expected string, got number at element /åå",
-  "position": { "jsonpointer": "/åå", "line": "1", "char": "7" }
+  "position": { "jsonpointer": "/åå", "char": "7", "line": 1 }
 }
 ```
 
-The document could also be invalid at JSON syntax level, for example of the closing `}` is missing (@lst-2). The error is also located by its byte offset:
+The string could also be part of a larger, newline-delimited JSON document. In this case it makes sense to use a nested error (@lst-4):
+
+```{#lst-4 .json lst-cap="Error in a newline-delimited JSON document"}
+{
+  "message": "Invalid document at line 7",
+  "position": [ {
+    "dimension": "line",
+    "address": "7",
+    "errors": [ {
+      "message": "Expected string, got number at element /åå",
+      "position": {
+        "jsonpointer": "/åå", "char": "7", "line": 1
+      }
+    } ]
+  } ]
+}
+```
+
+
+The document could also be invalid at JSON syntax level, for example if the closing `}` is missing (@lst-2):
 
 ```{#lst-2 .json lst-cap="Error in JSON syntax"}
 {
   "message": "Unexpected end of JSON input at character 8",
-  "position": { "line": "1", "char": "8", "offset": "10" }
+  "position": { "line": "1", "char": "8"  }
 }
 ```
 
@@ -110,6 +129,7 @@ A similar document could be invalid on byte level. The following table illustrat
 +----------------+--------+--------+-----------------+--------+--------+--------+--------+--------+--------+
 
 
+
 ::: {#lst-3 lst-cap="Invalid JSON on multiple levels"}
 
 
@@ -118,12 +138,12 @@ A similar document could be invalid on byte level. The following table illustrat
   {
     "level": "warning",
     "message": "Ill-formed UTF-8 byte sequence at offset 8",
-    "position": { "line": "1", "char": "", "offset": "8" }
+    "position": { "line": "1", "char": "7", "offset": "8" }
   },
   {
     "level": "error",
     "message": "Expected JSON value at line 1, column 7",
-    "position": { "line": "1", "char": "7", "linecol": "1:7", "offset": "8" }
+    "position": { "line": "1", "char": "7", "linecol": "1:7" }
   }
 ]
 ```
@@ -134,35 +154,28 @@ A similar document could be invalid on byte level. The following table illustrat
 
 The key words "MUST", "MUST NOT", "REQUIRED", "SHOULD", "SHOULD NOT", "RECOMMENDED", "NOT RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in BCP 14 ([RFC 2119] and [RFC 8174]) when, and only when, they appear in all capitals, as shown here.
 
-Only section @sec-errors to @sec-locator-formats, excluding examples and notes, and the [list of normative references](#normative-references) are normative parts of this specification.
+Only section @sec-errors to @sec-dimensions, excluding examples and notes, and the [list of normative references](#normative-references) are normative parts of this specification.
 
 Specific support of Data Validation Error Format by an application depends on two options. Both MUST be documented by applications:
 
-1. Support either the full format or only support condense form of [positions] being locator maps
-2. The set of supported [locator formats]
-
-<!--
-A **validator** is an executable function that transforms a **document** into a (possibly empty) set of **errors**.
-The document is valid in this context if the set of errors is empty.
--->
+1. Support of either the full format or only [**positions**](#positions) in condense form being [**locator maps**](#locator-map)
+2. The set of supported [**dimensions**](#sec-dimensions)
 
 # Errors {#sec-errors}
 
 An **Error** is a JSON object with: 
 
-- optional field `message` with an **error message**, being a non-empty string
+- mandatory field `message` with an **error message**, being a non-empty string.
+  Applications MAY use a default value for error messages.
 
 - optional field `types` with an array of **error types**, each being a non-empty string.
   Error types can be used for grouping errors and they SHOULD be URIs. Repetitions of
-  identical strings in the same array SHOULD be ignored.
+  identical strings in the same array MUST be ignored.
 
-- optional field `level` with an **error level**, being one of the strings `error` or `warning`.
+- optional field `level` with an **error level**, being one of the strings `error`, `warning`, or `info`.
+  Application MUST NOT differentiate between error level `error` and no error level.
 
-- optional field `position` with [positions]
-
-An error is also called **warning** if field `level` has value `warning`.
-
-Applications SHOULD add a default value for errors without field `message`.
+- optional field `position` with a [**position**](#positions). Applications MUST NOT differentiate between empty position and no position.
 
 ::: {.callout-note}
 Language and localization of error messages is out of the scope of this specification.
@@ -170,15 +183,18 @@ Language and localization of error messages is out of the scope of this specific
 
 # Positions
 
-An error can have one or more **positions**. Positions are
+An error can have a **position**. A position is given
 
-- either a JSON array of **[locators]** (detailled form),
+- either in **full form** as JSON array of [**locators**](#locators),
 
-- or a **[locator map](#locator-maps)** (condense form).
+- or in **condense form** with a [**locator map**](#locator-maps).
 
-Every locator map can be transformed to an equivalent array of locators. The reverse transformation is not always possible.
+Every locator map can be transformed to an equivalent array of locators. The reverse transformation is only possible if there is at most one locator per dimension and no locator has nested errors.
 
-Locators of the same positions SHOULD have an non-empty intersection.
+::: {.callout-note}
+Locators of the same positions should refer to roughly the "same" part of a document or at least have a common intersection.
+This requirement is difficult to formalize because locators refer to different document models, so it is no normative part of this specification yet.
+:::
 
 [locator format]: #locator-formats
 [locator map]:: #locator-maps
@@ -187,29 +203,30 @@ Locators of the same positions SHOULD have an non-empty intersection.
 
 A **Locator** is a JSON object with
 
-- mandatory field `format` with the name of a **[locator format](#sec-locator-formats)**, being a non-empty string
-- mandatory field `value` with the **locator value**, being a string
-- optional field `errors` with an array of [errors](#sec-errors) within the located document fragment.
+- mandatory field `dimension` with the name of a [**dimension**](#dimensions)
 
-Locator format and locator name MAY also be referred to as "dimension" and "address" of a locator.
+- mandatory field `address` with the **address**, being a string conforming to the **locator format** identified by the name of the **dimension**.
 
-```{#lst-locator .json lst-cap="A simple locator indicating the position line (locator format) 7 (locator value)"}
-{ "format": "line", "value": "7" }
+- optional field `errors` with an array of nested [**errors**](#sec-errors) within the located part of a document.
+
+
+```{#lst-locator .json lst-cap="A simple locator"}
+{ "dimension": "line", "address": "7" }
 ```
 
-Errors in the `errors` field are called **nested errors**. Nested errors allow to reference locations within nested documents (@lst-nested-example and @lst-nested-example-2):
+Nested errors allow to reference locations within nested documents (@lst-nested-example and @lst-nested-example-2):
 
 ```{#lst-nested-example .json lst-cap="An error in line 2 of file `example.txt` in archive `archive.zip`"}
 {
   "message": "Invalid value in line 2 in file example.txt in file archive.zip",
   "position": [ {
-    "format": "file",
-    "value": "archive.zip",
+    "dimension": "file",
+    "address": "archive.zip",
     "errors": [ {
       "message": "Invalid value in line 2 in file example.txt",
       "position": [ {
-        "format": "file",
-        "value": "example.txt",
+        "dimension": "file",
+        "address": "example.txt",
         "errors": [ { 
           "message": "Invalid value in line 2",
           "position": { "line": "2" }
@@ -224,11 +241,11 @@ Errors in the `errors` field are called **nested errors**. Nested errors allow t
 {
   "message": "Invalid character in line 7, column 3",
   "position": [ {
-    "format": "linecol",
-    "value": "7:3"
+    "dimension": "linecol",
+    "address": "7:3"
   }, {
-    "format": "line",
-    "value": "7",
+    "dimension": "line",
+    "address": "7",
     "errors": [ {
       "message": "Invalid character 3",
       "position": { "char": "3" }
@@ -239,94 +256,83 @@ Errors in the `errors` field are called **nested errors**. Nested errors allow t
 
 ## Locator maps
 
-A **locator map** is a JSON object that maps **[locator format names](#sec-locator-formats)** to **locator values**.
+A **locator map** is a JSON object that maps names of [**dimensions**](#sec-dimensions) to **addresses**.
 
 ```{#lst-locator-map .json lst-cap="A simple locator map indicating the position line 7, character 42"}
 { "line": "7", "char": "42" }
 ```
 
-A locator map is equivalent to an array of locators with key and value of the JSON object entries mapped to field `format` and `value` of each locator. An array of locators can be reduced to a locator map by dropping all nested errors and selecting only the first locator of each locator format.
+A locator map is equivalent to an array of locators with key and value of the JSON object entries mapped to field `dimension` and `address` of each locator. An array of locators can be reduced to a locator map by dropping all nested errors and selecting only the first locator of each locator format.
 
-Applications MAY restrict their support of Data Validation Error Format to positions with locator maps. In this case nested positions and multiple positions of same locator format are not supported.
+Applications MAY restrict their support of Data Validation Error Format to positions with locator maps. In this case nested errors and positions with multiple locators per dimension are not supported.
 
-# Locator formats {#sec-locator-formats}
+# Dimensions {#sec-dimensions}
 
-A **locator format** is a formal language of Unicode strings to locate positions in a document. The sets of strings of the language are called **locator values** of the locator format.
+A **dimension** is a defined method to address parts of a document. Each dimension has:
 
-Each locator format has a unique **locator format name**. The name is a string that start with lowercase letter `a` to `z`, optionally followed by a sequence of lowercase letters, digits `0` to `9` and/or `-`.
+- a unique **name**, being a string that start with lowercase letter `a` to `z`, optionally followed by a sequence of lowercase letters, digits `0` to `9` and/or `-`.
 
-Each locator format can encode positions of documents that conform to a set of matching document models. 
+- a **locator format**, being a formal language of Unicode strings to encode references to parts of a document. The sets of strings of the language are called **addresses**.
+
+- a **document model** matching the **locator format**.
+
+Applications SHOULD support the following dimensions:
+
+name            | locator format        | document model
+---------------:|-----------------------|----------------------
+`offset`        | [offset number]       | sequence of elements
+`char`          | [character number]    | sequence of characters or code points
+`cell`          | [cell reference]      | tabular data
+`file`          | [file path]           | directory tree
+`line`          | [line number]         | sequence of lines
+`linecol`       | [line and column]     | sequence of characters with line breaks
+`jsonpointer`   | [JSON Pointer]        | JSON
+`xpath`         | [XML Path Expression] | XML or compatible hierarchies
 
 <!--
+A **validator** is an executable function that transforms a **document** into a (possibly empty) set of **errors**.
+The document is valid in this context if the set of errors is empty.
 
-For instance the `char` format a locator format  
+^[Unicode strings are sequences as well but its not obvious whether the elements are code points, code units or characters. Line numbers in Unicode are not trivial neither because multiple definitions of line breaks exist.]
 
-Fir ub
-A locator value (are also referred to as "address") refers to
-
-Locator formats 
-
-<!--
 For instance a `line` locator assumes a model of lines and a `region` locator assumes an image. The encoding of this model, for instance a text file or an image file, is out of the scope of the locator language.
--->
 
 The set of normative locator formats has not been finally specified yet. The final version of this specification may need to define a registry of locator formats. The following locator formats will likely be included:
+-->
 
-name            | locator format        | document models
----------------:|-----------------------|----------------
-`offset`        | [offset number]       | sequence of elements
-`char`          | [character position]  | sequence of characters or code points
-`cell`          | [cell reference]      | tabular data models
-`file`          | [file path]           | directory tree
-`line`          | line number (first: 1)| sequence of lines
-`linecol`       | line number and column | sequence of characters with line breaks
-`jsonpointer`   | JSON Pointer          | JSON
-`xpath`         | XPath (or a subset)   | XML
-`fq`            | format and path       | all binary formats supported by [fq] (see @lst-fq)
+See @sec-additional-dimensions for more dimensions.
 
-The locator formats require some more detailled specification. For instance line number depend on a common definition of line breaks, some formats include U+0B, U+0C, U+85, U+2028, U+2029...
+### Sequential document models
 
-[fq]: https://github.com/wader/fq?tab=readme-ov-file#fq
-
-```{#lst-fq .json lst-cap="Error using fq to locate the internal timestamp of a file in a .gz archive"}
-{
-  "message": "Timestamp must not be in the future!",
-  "position": {
-    "fq": "gzip:.members[0].mtime"
-  }
-}
-```
-
-:::{.callout-note}
-More candidates of locator formats to be specified:
-
-- [RFC 5147](https://tools.ietf.org/html/rfc5147) for ranges of lines and characters
-- [RFC 7111](https://tools.ietf.org/html/rfc7111) for tabular data
-- IIIF (section in an image)
-- RDF graphs (every subset of an RDF graph is another RDF graph)
-- Subsets of query languages (SQL, SPARQL...)
-- PDF highlighted text annotations
-- `id` for data models that refer to elements with an identifier
-- [PICA Path](https://format.gbv.de/query/picapath)
-- [MARCspec](https://format.gbv.de/query/marcspec)
-- ...
-:::
-
-### Offset number
+#### Offset number
 
 The **offset number** locator format with name `number` is used to reference an element in a sequence of elements. The locator value is non-negative integer encoded as string without leading zeroes. The first element has number zero (locator value `0`).
 
-### Character position
+#### Character number
 
-The **character position** locator format with name `char` is used to reference a character in a sequence of characters from a character set. The locator value is a positive integer encoded as string without leading zeroes. The first character has number one (locator value `1`).
+The **character number** locator format with name `char` is used to reference a character in a sequence of characters from a character set. The locator value is a positive integer encoded as string without leading zeroes. The first character has number one (locator value `1`).
 
 In Unicode strings, this locator format refers to code points instead of visual characters.
 
-### Cell reference
+#### Line number
+
+:::{.callout-warning}
+Possibly requires some more detailled specification. For instance line number depend on a common definition of line breaks, some formats include U+0B, U+0C, U+85, U+2028, U+2029...
+:::
+
+#### Line and Column
+
+[Line number] and [character position] within the line, separated by colon `:` ...
+
+### Tabular document models
+
+#### Cell reference
 
 The **cell reference** locator format with name `cell` is used to reference a cell or a range of cells in a table as known from spreadsheet software. The locator value consists of a pair of column and row, optionally followed by colon (`:`) and another pair of column and row. Columns are given in hexavigesimal system (A=1, B=2..., Z=26, AA=27, AB=28...) and rows are given by numbers, starting from 1.
 
-### File path
+### Hierarchical document models
+
+#### File path
 
 The **file path** locator format with name `file` is used to reference a file or directory in a directory tree. The locator value must be a POSIX path, being a string optionally beginning with a slash (`/`), followed by zero or more file names, separated by slash. A file name is a non-empty sequence of Unicode code points excluding the slash (`U+002F`) and the null byte (`U+0000`).
 
@@ -334,7 +340,23 @@ The **file path** locator format with name `file` is used to reference a file or
 Depending in the document model, file names may be defined as binary string instead of Unicode strings. In most cases UTF-8 encoding can be assumed to map Unicode code points to bytes but (TODO: this requires more careful examination). 
 :::
 
+#### JSON Pointer
+
+...
+
+See <https://datatracker.ietf.org/doc/html/rfc6901>
+
+#### XML Path Expression
+
+TODO: Subset of XPath, see <https://www.w3.org/TR/xpath20/#id-path-expressions> (must start with `/`, no filter expressions, no reverse steps, no predicates except numbers.
+
+### Graph document models
+
+...
+
 # References
+
+[XPath]: https://www.w3.org/TR/xpath/
 
 ## Normative References
 
@@ -363,10 +385,9 @@ Depending in the document model, file names may be defined as binary string inst
 ## Informative references
 
 - [JSON Schema](https://json-schema.org/) schema language
+- [XPath] XML Path Language
 
 # Appendices {.unnumbered}
-
-The following information is non-normative.
 
 ## JSON Schemas {.unnumbered}
 
@@ -375,6 +396,43 @@ Error records can be validated with the non-normative JSON Schema [`schema.json`
 ```json
 {{< include schema.json >}}
 ```
+
+## Additional dimensions {#sec-additional-dimensions .unnumbered}
+
+The following [dimensions](#sec-dimensions) are not normative part of the specification because they have not fully been specified yet:
+
+name        | locator format   | document models
+------------|------------------|------------------
+`fq`        | format and path  | all binary formats supported by [fq] (see @lst-fq)
+`rfc5147`   | [RFC 5147](https://tools.ietf.org/html/rfc5147) | characters and lines
+`rfc7111`   | [RFC 7111](https://tools.ietf.org/html/rfc7111) | tabular date
+`id`        | Unicode string | data models that refer to elements with an identifier
+
+`rfc5147`, in contrast to `char` and `line`, also supports ranges. `rfc7111`, in contrast to `cell`, also supports ranges and multi-selection.
+
+[fq]: https://github.com/wader/fq?tab=readme-ov-file#fq
+
+```{#lst-fq .json lst-cap="Error using fq to locate the internal timestamp of a file in a .gz archive"}
+{
+  "message": "Timestamp must not be in the future!",
+  "position": {
+    "fq": "gzip:.members[0].mtime"
+  }
+}
+```
+
+The following locator formats or standards are yet to be evaluated for its use as dimension:
+
+- `RangeAddress` of [References in OpenDocument](https://docs.oasis-open.org/office/OpenDocument/v1.4/OpenDocument-v1.4-part4-formula.html#References)
+- IIIF (section in an image)
+- RDF graphs (every subset of an RDF graph is another RDF graph)
+- SHACL [focus node](https://www.w3.org/TR/shacl/#focusNodes) and [result path](https://www.w3.org/TR/shacl/#results-path) serialized in a subset of RDF Turtle
+- Subset of SQL SELECT statements
+- PDF highlighted text annotations
+- Some variant of [Property Graph Exchange Format (PG)](https://pg-format.github.io/) and/or CYPHER Query for property graphs
+- [PICA Path](https://format.gbv.de/query/picapath)
+- [MARCspec](https://format.gbv.de/query/marcspec)
+- ...
 
 ## Changes {.unnumbered}
 
